add basic layout

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <title>launch</title>
 </head>
 <body>
-    
+    <section id="grid-container">
+        <div id="greet">wassup</div>
+        <div id="image"><img src=""></div>
+        <div id="link-1" class="link"><a href="https://mail.google.com">email</a></div>
+        <div id="link-2" class="link"><a href="https://www.youtube.com">youtube</a></div>
+        <div id="link-3" class="link"><a href="">link 3</a></div>
+    </section>
 </body>
 </html>
